--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/imageViewGender"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:contentDescription="@null"
+        app:srcCompat="@drawable/female" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="80dp"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textViewName"
@@ -19,36 +27,38 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textSize="20sp" />
 
-        <ImageView
-            android:id="@+id/imageViewGender"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:contentDescription="@null"
-            app:srcCompat="@drawable/female" />
+            android:paddingTop="2dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgCode"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <TextView
+                android:id="@+id/textViewCountryCode"
+                android:layout_width="wrap_content"
+                android:paddingTop="10dp"
+                android:layout_height="wrap_content"
+                android:paddingRight="40sp"
+                android:text="Code"
+
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textViewPhoneNum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Number"
+
+                android:textSize="20sp" />
+        </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-        android:orientation="horizontal">
-
-        <TextView
-            android:textSize="20sp"
-            android:id="@+id/textViewCountryCode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="40sp"
-
-            android:text="Code" />
-
-        <TextView
-            android:textSize="20sp"
-            android:id="@+id/textViewPhoneNum"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:text="Number" />
-    </LinearLayout>
 </LinearLayout>
